--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Web Design Mastery | Capturer</title>
   </head>
-  <body>EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE
+  <body>
     <header class="header" id="home">
       <nav>
         <div class="nav__header">
